--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ on:
 
 jobs:
   build:
+    timeout-minutes: 30
+    
     strategy:
       matrix:
         os: [windows-latest, macos-latest] # 只要 Win + Mac
@@ -34,15 +36,17 @@ jobs:
           version: 9
           run_install: false
 
-      - name: Generate config.yaml (cross-platform)
+      - name: Create config.yaml
+        shell: bash
         run: |
+          cp config.yaml.example config.yaml
           node -e "
-            const fs = require('fs');
-            const crypto = require('crypto');
-            const yaml = fs.readFileSync('config.yaml.example', 'utf8');
-            const secret = crypto.randomBytes(16).toString('hex');
-            const newYaml = yaml.replace(/secret:.*/, `secret: \"${secret}\"`);
-            fs.writeFileSync('config.yaml', newYaml);
+          const fs = require('fs');
+          const crypto = require('crypto');
+          let yaml = fs.readFileSync('config.yaml', 'utf8');
+          const secret = crypto.randomBytes(16).toString('hex'); // 32位hex
+          yaml = yaml.replace(/secret:.*/, 'secret: \"' + secret + '\"');
+          fs.writeFileSync('config.yaml', yaml);
           "
 
       - name: Build frontend
