--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,10 +68,8 @@ jobs:
       - name: Build Wails app
         run: wails build
 
-      - name: Debug build files
-        run: ls -R build
-
-      - name: Upload Release Assets
-        uses: softprops/action-gh-release@v1
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
         with:
-          files: build/bin/**
+          name: finboard-${{ matrix.os }}
+          path: build/bin
